--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "types": ["react", "react-dom", "react-router-dom"],
     "lib": [
       "dom",
       "dom.iterable",
